--- a/src/assets/styles/sections/image-with-text.scss
+++ b/src/assets/styles/sections/image-with-text.scss
@@ -5,7 +5,7 @@
 
   .img-container {
     max-width: 50rem;
-    margin: 0 auto;
+    margin: 0 auto 3em;
     @include swipe_load();
   }
 
@@ -16,13 +16,17 @@
       transition: opacity 0.4s 0.5s, transform 0.3s 0.75s;
     }
 
-    > h1, h2, h3, h4, h5 {
-      transition-delay: 0.3s, 0.6s
+    > h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+      transition-delay: 0.3s, 0.6s;
     }
 
     &.out-of-viewport > * {
       transform: translate3d(0, 25%, 0);
-      opacity: 0,
+      opacity: 0;
     }
   }
 
@@ -49,7 +53,7 @@
     &.dir-right {
       flex-direction: row-reverse;
     }
-    
+
     .text-container > * {
       max-width: 40rem;
       margin-left: 0;
